2003-07-26  Matthias Clasen  <maclas@gmx.de>

	* tests/printf-test.c: New test, tests printf behaviour. This was already mentioned in Makefile.am
	by accident.

	* tests/file-test.c: New test, currently contains mkstemp tests copied from testglib.c.

	* tests/Makefile.am (test_programs): Add file-test.

	* glib/gprintf.c: Fix all g_return_val_if_fail () checks to return -1 on error to match the
	behaviour of the stdio printf() family.

	* glib/garray.h: 
	* glib/garray.c (g_{,byte,pointer}_remove_range): New functions to remove a range of elements
	from an array.  (#94879, Nalin Dahyabhai)

	* glib/gmessages.c (g_logv): Remove the 1024 char limit in the common (non-recursive)
	case.

2003-07-25  Matthias Clasen  <maclas@gmx.de>

	* glib/gwin32.c: 
	* glib/gutf8.c: 
	* glib/gunicollate.c: 
	* glib/gtree.c: 
	* glib/gspawn.c: 
	* glib/gmain.c: 
	* glib/giochannel.c: 
	* glib/gfileutils.c: 
	* glib/gerror.c: 
	* glib/gconvert.c: 
	* glib/gasyncqueue.c: 
	* glib/gmem.c: Remove some explicit Docbook markup which is no longer necessary
	since gtk-doc does the right thing.

	* glib/gutf8.c (g_utf8_get_char_validated): Work around gtk-doc stupidity.

2003-07-20  Hans Breuer  <hans@breuer.org>

	* glib/trio/makefile.msc : (new file) for msvc build

	* glib/glib.def : removed some duplicated entries

	* glib/gscanner.c : add same workaround for MSVC(5.0)
	which does not allow to cast an uint64 to float.
	Same as in gvaluetransform.c
	Also move #include <io.h> behind inclusion of "glib.h"
	which defines the needed G_OS_WIN32

	* glib/makefile.msc.in : added gprintf.obj, trio\trio.lib
	as well as shell32.lib

	* tests/spawn-test.c : include <io.h> on win32

2003-07-12  Matthias Clasen  <maclas@gmx.de>

	* glib/gprintf.c: Doc additions.

2003-07-10  Joel Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

Wed Jul  9 16:27:26 2003  Manish Singh  <yosh@gimp.org>

	* glib/gmain.c (g_main_context_unref_and_unlock): check if