@@ -1,3 +1,7 @@
+2003-07-28  Matthias Clasen  <maclas@gmx.de>
+
+	* glib/glib-sections.txt: Add g_setenv() and g_unsetenv().  (#100763)
+
 2003-07-26  Matthias Clasen  <maclas@gmx.de>
 
 	* glib/tmpl/arrays.sgml: 
